[package]
name = "manuals"
version = "0.1.0"
edition = "2024"

[dependencies]
firefly-rust = { version = "0.13.2", features = ["alloc", "talc", "sudo"] }
firefly-types = "0.9.0"
firefly-ui = "0.2.0"

[patch.crates-io]
firefly-types = { path = "../firefly-types" }

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true      # Enable link-time optimization
